<resources>
    <string name="app_name">MealsFood</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_favorite">Favorite</string>
    <string name="favorite_food">Favorite Food</string>
    <string name="category">Category</string>
    <string name="area">Area</string>
    <string name="tags">Tags</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="dashboard_header">Simple way to find\nTasty food</string>
    <string name="dashboard_popular_food">Popular Food</string>
    <string name="dashboard_title">Beef</string>
    <string name="empty_text">No Favorite Food, yet</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="search_food">Search food</string>
    <string name="more">More</string>
    <string name="about_apps">About Apps</string>
    <string name="version">Version 1.0</string>
    <string name="developer_name">© 2021 Alva Yonara Puramandya</string>
    <string name="about_developer">About Developer</string>
    <string name="linkedin_url">https://www.linkedin.com/in/alva-yonara-puramandya/</string>
</resources>